plugins {
	id 'fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

def loadExtraProperties(String relPath) {
	def f = file(relPath)
	if (!f.exists()) {
		println "WARNING: Properties file not found: ${f.absolutePath}"
		return false
	}
	def props = new Properties()
	f.withInputStream { props.load(it) }
	props.each { k, v -> project.ext.set(k.toString(), v.toString()) }
	return true
}

loadExtraProperties('../../_properties/1.20.1fabricgradle.properties')
loadExtraProperties('../_GlobalRsc/globalgradle.properties')

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name + "-fabric"
}

sourceSets {
	main {
		resources {
			srcDirs '../_GlobalRsc/common/'
		}
		resources {
			srcDirs '../_GlobalRsc/1.20.1/'
		}
	}
}

repositories {
    maven {
        name = "CurseForge"
        url = "https://minecraft.curseforge.com/api/maven/"
    }
    maven {
        name = "CurseMaven"
        url = "https://www.cursemaven.com"
    }
}

loom {
	splitEnvironmentSourceSets()

	mods {
        "template-mod" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}

}

fabricApi {
	configureDataGeneration {
		client = true
	}
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

    modImplementation "curse.maven:addonslib-1090999:${addonslib_version}"
    modImplementation "curse.maven:jei-238222:${jei_version}"

    modImplementation "curse.maven:macaws-roofs-352039:${roofs_version}"
    modImplementation "curse.maven:macaws-fences-and-walls-453925:${fences_version}"
    modImplementation "curse.maven:macaws-doors-378646:${doors_version}"
    modImplementation "curse.maven:macaws-bridges-351725:${bridges_version}"
    modImplementation "curse.maven:macaws-windows-363569:${windows_version}"
    modImplementation "curse.maven:macaws-paths-and-pavings-629153:${paths_version}"
    modImplementation "curse.maven:macaws-trapdoors-400933:${trapdoors_version}"
    modImplementation "curse.maven:macaws-stairs-1119394:${stairs_version}"
    modImplementation "curse.maven:macaws-furniture-359540:${furniture_version}"

    modImplementation "curse.maven:biomes-o-plenty-220318:${bop_version}"
    modImplementation "curse.maven:glitchcore-955399:${glitch_core_version}"
    modImplementation "curse.maven:terrablender-fabric-565956:${terrablender_version}"
    include implementation("com.electronwill.night-config:toml:${nightconfig_version}")
    include implementation("com.electronwill.night-config:core:${nightconfig_version}")
    include implementation("net.jodah:typetools:0.6.3")

    // Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
	
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
        expand project.properties
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 17
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}

jar {
	inputs.property "archivesName", project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}